# CivSim

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: FastNoiseLite.h.301016CFBBBA743E.idx  civ.cpp.CF39BAB00D3C1CAB.idx  civ.hpp.C4FACC436BF2E54E.idx  creature.cpp.EAF976982B78D53E.idx  creature.hpp.325B80B8B59B007A.idx  helper.cpp.9E0885B098107B32.idx  helper.hpp.43F87121D7C957AF.idx  levelGeneration.cpp.3A5B2C4C7509D17D.idx  levelGeneration.hpp.34250066985099D2.idx  main.cpp.FC2E73E5B9AC0CE4.idx  mover.cpp.8D04B8556C288BE3.idx  mover.hpp.CF9A2FFCF1EC91FC.idx  pathFinding.cpp.4DC252DC2088BE03.idx  pathFinding.hpp.4263FAC3557183D1.idx  types.hpp.91A9E0AF60EEE702.idx
src/: civ.cpp  civ.hpp  creature.cpp  creature.hpp  helper.cpp  helper.hpp  levelGeneration.cpp  levelGeneration.hpp  loadFile.hpp  logs.hpp  logs.txt  main.cpp  mover.cpp  mover.hpp  pathFinding.cpp  pathFinding.hpp  todo.txt  types.hpp  ui.cpp  ui.hpp
src/levels/: test.txt
